--- a/.gitignore
+++ b/.gitignore
@@ -160,5 +160,5 @@ bh_unicode_properties.cache
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 
-
-# End of https://www.gitignore.io/api/osx,python,sublimetext
+# Project Files
+src/spotify_keys.sh
