--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ ipython = "*"
 isort = "*"
 jupyter = "*"
 "flake8" = "*"
+"flake8-bugbear" = "*"
+"flake8-mypy" = "*"
 
 [requires]
 python_version = "3.7"
