--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,8 @@ jupyter = "*"
 "flake8" = "*"
 "flake8-bugbear" = "*"
 "flake8-mypy" = "*"
+jedi = "*"
+mypy = "*"
 
 [requires]
 python_version = "3.7"
