some more flake8

--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,11 @@ jupyter = "*"
 jedi = "*"
 mypy = "*"
 rope = "*"
+flake8-comprehensions = "*"
+flake8-alfred = "*"
+flake8-todo = "*"
+flake8-eradicate = "*"
+flake8-import-order = "*"
 
 [requires]
 python_version = "3.7"
