--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ flake8-alfred = "*"
 flake8-todo = "*"
 flake8-eradicate = "*"
 flake8-import-order = "*"
+vulture = "*"
 
 [requires]
 python_version = "3.7"
