--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,8 @@ flake8-todo = "*"
 flake8-eradicate = "*"
 flake8-import-order = "*"
 vulture = "*"
+pylint = "*"
+black = "*"
 
 [requires]
 python_version = "3.7"
