--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,4 +11,6 @@ pipelines:
         caches:
           - pip
         script: # Modify the commands below to build your repository.
-          - pip install -r requirements.txt
+          - pip install pipenv --upgrade
+          - pipenv install --dev
+          - pipenv run pytest
