--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
       - image: circleci/python:3.7.2
     steps:
       - checkout
+      - restore_cache:
+          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           command: |
             sudo pip install pipenv
@@ -13,22 +15,12 @@ jobs:
             pipenv install --dev
       - run: pipenv run pytest --junitxml test-results/results.xml
       - run: mkdir test-reports
-      # - run: pipenv run coverage report && pipenv run coverage xml -o test-results/coverage.xml
       - store_test_results:
           path: test-results
       - store_artifacts:
           path: test-results
           destination: tr1
-      # - restore_cache:
-      #     key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-      # - run:
-      #     command: |
-      #       sudo pip install pipenv
-      #       pip install pipenv --upgrade
-      #       pipenv install --dev
-      # - save_cache: # cache Python dependencies using checksum of Pipfile as the cache-key
-      #     key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-      #     paths:
-      #       - ".venv"
-      #       - "/usr/local/bin"
-      #       - "/usr/local/lib/python3.7/site-packages"
+      - save_cache:
+          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          paths:
+            - "/home/circleci/.local/share/virtualenvs/circleci-deneb-ZS5KoU3r"
