--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ jobs:
       - run:
           command: |
             sudo pip install pipenv
-            pip install pipenv --upgrade
+            pip install pipenv pip --upgrade
             pipenv install --dev
-      - run: pipenv run pytest -r --junitxml test-results/results.xml
+      - run: pipenv run pytest --junitxml test-results/results.xml
       - run: mkdir test-reports
       - store_test_results:
           path: test-results
