--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ sentry-sdk = "*"
 tortoise-orm = "*"
 asyncpg = "*"
 aiohttp = "*"
+arrow = "*"
 
 [dev-packages]
 ipdb = "*"
@@ -25,6 +26,7 @@ pytest-asyncio = "*"
 aiomock = "*"
 coverage = "*"
 pylama = "*"
+black = "*"
 
 [requires]
 python_version = "3.7"
