--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,9 @@ jobs:
             sudo pip install pipenv
             sudo pip install pipenv pip --upgrade
             pipenv install --dev
-      - run: pipenv run pylama deneb
       - run:
           name: pytest
-          command: pipenv run pytest --junitxml test-results/results.xml
-          when: always
+          command: pipenv run pytest --junitxml test-results/results.xml --pylama
       - store_test_results:
           path: test-results
       - store_artifacts:
