--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,10 @@ max_line_length = 100
 [pylama:pycodestyle]
 max_line_length = 100
 
-[isort]
+[tool:isort]
 multi_line_output=5
 known_first_party=tests
+
+[tool:pytest]
+addopts = --cov=deneb tests/ --pylama
+junit_duration_report = call
