coverage config to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,14 @@ known_first_party=tests
 [tool:pytest]
 addopts = --cov=deneb tests/ --pylama
 junit_duration_report = call
+
+[coverage:run]
+omit =
+        *__init__.py*
+        deneb/migrations/*
+        deneb/__main__.py
+        deneb/logger.py
+        deneb/structs.py
+        deneb/tools.py
+        deneb/db.py
+        deneb/config.py
