--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: python:3.7.1
+image: python:3.7.2
 
 pipelines:
   default:
@@ -11,6 +11,5 @@ pipelines:
         caches:
           - pip
         script: # Modify the commands below to build your repository.
-          - pip install pipenv --upgrade
-          - pipenv install --dev
-          - pipenv run pytest
+          - make init-env
+          - make test
