--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,8 @@ aiomock = "*"
 coverage = "*"
 pylama = "*"
 black = "*"
+alembic = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
