--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,7 @@ jobs:
       - store_test_results:
           path: test-results
       - store_artifacts:
-          path: test-results
-          destination: tr1
+          path: htmlcov
       - save_cache:
           key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
           paths:
