--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ known_first_party=tests
 [tool:pytest]
 addopts = --cov=deneb tests/ --pylama
 junit_duration_report = call
+filterwarnings =
+    ignore::DeprecationWarning
 
 [coverage:run]
 omit =
