--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [pylama]
 linters = mccabe,pep8,pycodestyle,pyflakes,isort
-skip=tests/*,*virtualenvs*
+skip=tests/*,*virtualenvs*,alembic/*
 
 [pylama:pep8]
 max_line_length = 100
