env example update

--- a/.env_example
+++ b/.env_example
@@ -1,14 +1,24 @@
+# Spotify API
 SPOTIPY_CLIENT_ID=
 SPOTIPY_CLIENT_SECRET=
 SPOTIPY_REDIRECT_URI=
+SPOTIPY_SCOPE='user-follow-read user-read-private playlist-modify-public playlist-modify-private playlist-read-private'
+
+# Facebook API
+FB_API_URL=
+FB_API_KEY=
+
+# Database
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
+
+# SSH
 SSH_USER=
 SSH_HOST=
-FB_API_URL=
-FB_API_KEY=
+
+# APP
 SENTRY_URL=
 ENVIRON=
 SERVER_NAME=
