no need for bracket

--- a/.env_example
+++ b/.env_example
@@ -2,7 +2,7 @@
 SPOTIPY_CLIENT_ID=
 SPOTIPY_CLIENT_SECRET=
 SPOTIPY_REDIRECT_URI=
-SPOTIPY_SCOPE='user-follow-read user-read-private playlist-modify-public playlist-modify-private playlist-read-private'
+SPOTIPY_SCOPE=user-follow-read user-read-private playlist-modify-public playlist-modify-private playlist-read-private
 
 # Facebook API
 FB_API_URL=
