fix-up test suite

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ addopts = --cov=deneb tests/ --pylama
 junit_duration_report = call
 filterwarnings =
     ignore::DeprecationWarning
+junit_family=xunit1
 
 [coverage:run]
 omit =
