--- a/.env_example
+++ b/.env_example
@@ -1,25 +1,25 @@
 # Spotify API
-SPOTIPY_CLIENT_ID=
-SPOTIPY_CLIENT_SECRET=
-SPOTIPY_REDIRECT_URI=
-SPOTIPY_SCOPE=user-follow-read user-read-private playlist-modify-public playlist-modify-private playlist-read-private
+export SPOTIPY_CLIENT_ID=
+export SPOTIPY_CLIENT_SECRET=
+export SPOTIPY_REDIRECT_URI=
+export SPOTIPY_SCOPE='user-follow-read user-read-private playlist-modify-public playlist-modify-private playlist-read-private'
 
 # Facebook API
-FB_API_URL=
-FB_API_KEY=
+export FB_API_URL=
+export FB_API_KEY=
 
 # Database
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
+export DB_NAME=
+export DB_USER=
+export DB_PASSWORD=
+export DB_HOST=
 
 # SSH
-SSH_USER=
-SSH_HOST=
+export SSH_USER=
+export SSH_HOST=
 
 # APP
-SENTRY_URL=
-ENVIRON=
-SERVER_NAME=
-SENTRY_ORG=
+export SENTRY_URL=
+export ENVIRON=
+export SERVER_NAME=
+export SENTRY_ORG=
