--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ aiohttp = "^3.6.2"
 arrow = "^0.15.5"
 pytz = "^2019.3"
 sqlalchemy = "^1.3.13"
+python-dotenv = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.2"
