--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,14 @@ executors:
     docker:
       - image: circleci/python:3.7.2
 
-jobs:
-  test-run-job:
-    executor: py-executor
-    steps:
-      - checkout
-      - pytest
+workflows:
+  main:
+    jobs:
+      - test-run-job:
+          executor: py-executor
+          steps:
+            - checkout
+            - pytest
 # version: 2
 # jobs:
 #   build:
