--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ executors:
       - image: circleci/python:3.7.2
 
 workflows:
-  main:
+  build:
     jobs:
       - test-run-job:
           executor: py-executor
