--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,32 +2,11 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+      - image: circleci/python:3.8.0
     steps:
       - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
-# version: 2.1
-# commands:
-#   init-venv:
-#     steps:
-#       - run: make init-circle-venv
-#   pytest:
-#     steps:
-#       - run: make test
-
-# executors:
-#   py-executor:
-#     docker:
-#       - image: circleci/python:3.7.2
-
-# workflows:
-#   build:
-#     jobs:
-#       - test-run-job:
-#           executor: py-executor
-#           steps:
-#             - checkout
-#             - pytest
+      - run: make init-circle-venv # run the `echo` command
+      - run: make test
 # version: 2
 # jobs:
 #   build:
