--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,11 @@ jobs:
     docker:
       - image: circleci/python:3.8.0
     steps:
-      - run:
-          name: venv init
-          command: make init-circle-venv
       - restore_cache:
           key: deps9-{{ .Branch }}-{{ checksum "poetry.lock" }}
       - checkout
-      - run:
-          name: pytest
-          command: make test
+      - run: make init-circle-venv
+      - run: make test
       - store_test_results:
           path: test-results
       - store_artifacts:
