--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pylama = "^7.7.1"
 black = "^19.10b0"
 alembic = "^1.4.1"
 psycopg2-binary = "^2.8.4"
+pytest-mock = "^3.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
