--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ arrow = "^0.15.5"
 pytz = "^2019.3"
 sqlalchemy = "^1.3.13"
 python-dotenv = "^0.12.0"
+uvloop = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.2"
@@ -36,6 +37,8 @@ black = "^19.10b0"
 alembic = "^1.4.1"
 psycopg2-binary = "^2.8.4"
 pytest-mock = "^3.1.0"
+pyinstrument = "^3.1.3"
+snakeviz = "^2.0.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
