--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,14 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: deps9-{{ .Branch }}
+          keys:
+            - pip-packages-{{ .Branch }}-{{ checksum "poetry.lock" }}
+            - pip-packages-{{ .Branch }}-
       - run: sudo apt-get update
       - run: sudo apt-get install -y python3-venv
       - run: make init-circle-venv
       - save_cache:
-          key: deps9-{{ .Branch }}
+          key: pip-packages-{{ .Branch }}-{{ checksum "poetry.lock" }}
           paths:
             - /home/circleci/.cache/pypoetry/virtualenvs
       - run: make test
