--- a/.env_example
+++ b/.env_example
@@ -1,25 +1,29 @@
 # Spotify API
-export SPOTIPY_CLIENT_ID=
-export SPOTIPY_CLIENT_SECRET=
-export SPOTIPY_REDIRECT_URI=
-export SPOTIPY_SCOPE='user-follow-read user-read-private playlist-modify-public playlist-modify-private playlist-read-private'
+SPOTIPY_CLIENT_ID=
+SPOTIPY_CLIENT_SECRET=
+SPOTIPY_REDIRECT_URI=
+SPOTIPY_SCOPE='user-follow-read user-read-private playlist-modify-public playlist-modify-private playlist-read-private'
 
 # Facebook API
-export FB_API_URL=
-export FB_API_KEY=
+FB_API_URL=
+FB_API_KEY=
 
 # Database
-export DB_NAME=
-export DB_USER=
-export DB_PASSWORD=
-export DB_HOST=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
 
 # SSH
-export SSH_USER=
-export SSH_HOST=
+SSH_USER=
+SSH_HOST=
 
-# APP
-export SENTRY_URL=
-export ENVIRON=
-export SERVER_NAME=
-export SENTRY_ORG=
+# SENTRY
+SENTRY_URL=
+ENVIRON=
+SERVER_NAME=
+SENTRY_ORG=
+
+
+# App config
+DENEB_PLAYLIST_NAME_PREFIX=
