--- a/.env_example
+++ b/.env_example
@@ -14,7 +14,7 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=
 
-# SSH
+# SSH host
 SSH_USER=
 SSH_HOST=
 
@@ -24,6 +24,8 @@ ENVIRON=
 SERVER_NAME=
 SENTRY_ORG=
 
+FLOWER_USER=<docker-compose-flower-credentials>
+FLOWER_PASSWORD=<docker-compose-flower-credentials>
 
 # App config
-DENEB_PLAYLIST_NAME_PREFIX=
+DENEB_PLAYLIST_NAME_PREFIX=example-
