use user for rabbitmq web access

--- a/.env_example
+++ b/.env_example
@@ -27,5 +27,8 @@ SENTRY_ORG=
 FLOWER_USER=<docker-compose-flower-credentials>
 FLOWER_PASSWORD=<docker-compose-flower-credentials>
 
+RABBITMQ_DEFAULT_USER=<docker-compose-rabbitmq-credentials>
+RABBITMQ_DEFAULT_PASS=<docker-compose-rabbitmq-credentials>
+
 # App config
 DENEB_PLAYLIST_NAME_PREFIX=example-
