--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ multi_line_output=5
 known_first_party=tests
 
 [tool:pytest]
-addopts = --cov=deneb tests/ --pylama
+addopts = --cov=deneb tests/
 junit_duration_report = call
 filterwarnings =
     ignore::DeprecationWarning
