--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.8"
 spotipy = "^2.9.0"
 logzero = "^1.5.0"
 click = "^7.0"
-sentry-sdk = "^0.16.4"
+sentry-sdk = "1.3.1"
 tortoise-orm = "^0.15.18"
 asyncpg = "^0.21.0"
 aiohttp = "^3.6.2"
