--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ uvloop = "^0.14.0"
 flower = "^0.9.4"
 celery = "^4.4.2"
 pypika = "0.37.1"
+tenacity = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.2"
