--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ pytz = "^2020.1"
 sqlalchemy = "^1.3.13"
 python-dotenv = "^0.14.0"
 uvloop = "^0.14.0"
-flower = "^0.9.4"
-celery = "^4.4.2"
+flower = "1.0.0"
+celery = "5.1.2"
 pypika = "0.37.1"
 tenacity = "^8.0.1"
 
