update .env with new config params

--- a/.env_example
+++ b/.env_example
@@ -32,3 +32,8 @@ RABBITMQ_DEFAULT_PASS=<docker-compose-rabbitmq-credentials>
 
 # App config
 DENEB_PLAYLIST_NAME_PREFIX=example-
+BROKER_URL=amqp://USER:PASSWORD@rabbitmq-inst:5672//
+
+DOCKER_REPO=<docker-repo>
+
+VERSION=<app-version>
